--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.1",
-    "regenerator-runtime": "^0.13.2"
+    "regenerator-runtime": "^0.13.2",
+    "babel-eslint": "9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
